# mcpp-iterator-facade

./: .gitignore  CMakeLists.txt  README.md
include/mcpp/iterator_facade/: iterator_facade.hpp
include/mcpp/iterator_facade/detail/: type_traits.hpp
tests/: CMakeLists.txt  ffmpeg.cpp
